--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,44 @@
 <!-- Отображаемое тело страницы -->
 
 <body id="main-page">
+  <header class="head">
+    <div class="container">
+      <div class="sublime__title">
+        <h1>Sublime</h1>
+      </div>
+      <div class="sublime__subtitle">
+        <span>
+          Sublime: A one page responsive wordpress theme <br>suitable for any kind of business representation.
+        </span>
+      </div>
+      <div class="sublime__link">
+        <a href="#">Download the psd</a>
+      </div>
+    </div>
+    <div class="head__wrapper">
+      <div class="container">
+        <div class="head__title">
+          <h1><span>We</span> create <br>Awesome Games</h1>
+        </div>
+        <div class="navbar row">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Development</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
