finish second section

--- a/app/index.html
+++ b/app/index.html
@@ -157,6 +157,74 @@
       </div>
     </div>
   </section>
+
+  <section class="featured-projects">
+    <div class="container">
+      <div class="featured__title">
+        <h1>Featured Projects</h1>
+      </div>
+      <div class="navbar row">
+        <ul class="nav">
+          <li class="nav-item col-xl-1">
+            <a class="nav-link active" href="#">ALL WORKS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">GAMES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">APPLICATIONS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">CONTENT DEVELOPMENT</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="games">
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img1.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img2.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img3.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img4.png" alt="">
+        </a>
+      </div>
+    </div>
+    <div class="games">
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img5.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img6.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img7.png" alt="">
+        </a>
+      </div>
+      <div class="item__games">
+        <a href="#">
+          <img src="./img/feature_projects/img8.png" alt="">
+        </a>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
