--- a/app/index.html
+++ b/app/index.html
@@ -180,48 +180,50 @@
         </ul>
       </div>
     </div>
-    <div class="games">
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img1.png" alt="">
-        </a>
+    <div class="container-lg">
+      <div class="games row">
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img1.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img2.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img3.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img4.png" alt="">
+          </a>
+        </div>
       </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img2.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img3.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img4.png" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="games">
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img5.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img6.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img7.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img8.png" alt="">
-        </a>
+      <div class="games row">
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img5.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img6.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img7.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img8.png" alt="">
+          </a>
+        </div>
       </div>
     </div>
   </section>
