finish third_section

--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,7 @@
   <section class="featured-projects">
     <div class="container">
       <div class="featured__title">
-        <h1>Featured Projects</h1>
+        <h1>Featured <span>P</span>rojects</h1>
       </div>
       <div class="navbar row">
         <ul class="nav">
@@ -180,48 +180,168 @@
         </ul>
       </div>
     </div>
-    <div class="games">
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img1.png" alt="">
-        </a>
+    <div class="container-lg">
+      <div class="games row">
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img1.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img2.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img3.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img4.png" alt="">
+          </a>
+        </div>
       </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img2.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img3.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img4.png" alt="">
-        </a>
+      <div class="games row">
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img5.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img6.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img7.png" alt="">
+          </a>
+        </div>
+        <div class="item__games padding-none row col">
+          <a href="#">
+            <img src="./img/feature_projects/img8.png" alt="">
+          </a>
+        </div>
       </div>
     </div>
-    <div class="games">
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img5.png" alt="">
-        </a>
+  </section>
+
+  <section class="strategic-process">
+    <div class="container">
+      <div class="strategic__title">
+        <h1>Strategic <span>P</span>rocess</h1>
       </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img6.png" alt="">
-        </a>
+      <div class="strategic__text">
+        <span>
+          <i>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+            pellentesque et nisi
+            et euismod. Pellentesque quis tristique magna.
+          </i>
+          <br> <br>
+          Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie
+          tincidunt
+          rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit non,
+          vehicula
+          lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu. Maecenas est risus, tristique volutpat sagittis
+          vel,
+          feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt rhoncus vel, molestie ut ligula. Mauris
+          vitae
+          ullamcorper odio. Mauris id enim gravida, tempor velit non, vehicula lacus. Sed rutrum tempus urna, sed
+          aliquam lectus
+          egestas eu. Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo
+          sem,
+          molestie tincidunt rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida,
+          tempor velit
+          non, vehicula lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu. Maecenas est risus, tristique
+          volutpat
+          sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt rhoncus vel, molestie ut
+          ligula.
+          Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit non, vehicula lacus. Sed rutrum tempus
+          urna, sed
+          aliquam lectus egestas eu.
+        </span>
       </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img7.png" alt="">
-        </a>
-      </div>
-      <div class="item__games">
-        <a href="#">
-          <img src="./img/feature_projects/img8.png" alt="">
-        </a>
+      <div class="strategy__items">
+        <div class="process row col-xl">
+          <div class="strategy__img col-xl-5">
+            <img src="./img/strategy/img1.png" alt="">
+          </div>
+          <div class="strategy__info col-xl-7">
+            <div class="strategy__title">
+              <h4>Our <span>P</span>rocess</h4>
+            </div>
+            <div class="strategy__text">
+              <span>
+                <i>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+                  pellentesque et nisi
+                  et euismod. Pellentesque quis tristique magna.
+                </i>
+                <br> <br>
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt
+                rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
+                non, vehicula
+                lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="method row col-xl">
+          <div class="strategy__info col-xl-7">
+            <div class="strategy__title">
+              <h4>Method</h4>
+            </div>
+            <div class="strategy__text">
+              <span>
+                <i>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+                  pellentesque et nisi
+                  et euismod. Pellentesque quis tristique magna.
+                </i>
+                <br> <br>
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt
+                rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
+                non, vehicula
+                lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu
+              </span>
+            </div>
+          </div>
+          <div class="strategy__img col-xl-5">
+            <img src="./img/strategy/img2.png" alt="">
+          </div>
+        </div>
+
+        <div class="outcome row col-xl">
+          <div class="strategy__img col-xl-5">
+            <img src="./img/strategy/img3.png" alt="">
+          </div>
+          <div class="strategy__info col-xl-7">
+            <div class="strategy__title">
+              <h4>Outcome</h4>
+            </div>
+            <div class="strategy__text">
+              <span>
+                <i>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+                  pellentesque et nisi
+                  et euismod. Pellentesque quis tristique magna.
+                </i>
+                <br> <br>
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt
+                rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
+                non, vehicula
+                lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
