--- a/app/index.html
+++ b/app/index.html
@@ -99,10 +99,12 @@
               <h4>App Development</h4>
             </div>
             <div class="app__text">
-              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                 pellentesque et nisi
                 et euismod. Pellentesque quis tristique magna.
-                <br> <br>
+              </p>
+              <span>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
@@ -120,10 +122,12 @@
               <h4>App Development</h4>
             </div>
             <div class="app__text">
-              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                 pellentesque et nisi
                 et euismod. Pellentesque quis tristique magna.
-                <br> <br>
+              </p>
+              <span>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
@@ -141,10 +145,12 @@
               <h4>App Development</h4>
             </div>
             <div class="app__text">
-              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                 pellentesque et nisi
                 et euismod. Pellentesque quis tristique magna.
-                <br> <br>
+              </p>
+              <span>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
@@ -234,13 +240,14 @@
         <h1>Strategic <span>P</span>rocess</h1>
       </div>
       <div class="strategic__text">
-        <span>
+        <p>
           <i>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
             pellentesque et nisi
             et euismod. Pellentesque quis tristique magna.
           </i>
-          <br> <br>
+        </p>
+        <span>
           Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie
           tincidunt
           rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit non,
@@ -274,13 +281,14 @@
               <h4>Our <span>P</span>rocess</h4>
             </div>
             <div class="strategy__text">
-              <span>
+              <p>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
                   et euismod. Pellentesque quis tristique magna.
                 </i>
-                <br> <br>
+              </p>
+              <span>
                 Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
                 molestie tincidunt
                 rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
@@ -297,13 +305,14 @@
               <h4>Method</h4>
             </div>
             <div class="strategy__text">
-              <span>
+              <p>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
                   et euismod. Pellentesque quis tristique magna.
                 </i>
-                <br> <br>
+              </p>
+              <span>
                 Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
                 molestie tincidunt
                 rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
@@ -326,19 +335,74 @@
               <h4>Outcome</h4>
             </div>
             <div class="strategy__text">
-              <span>
+              <p>
                 <i>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
                   pellentesque et nisi
                   et euismod. Pellentesque quis tristique magna.
                 </i>
-                <br> <br>
+              </p>
+              <span>
                 Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
                 molestie tincidunt
                 rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit
                 non, vehicula
                 lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu
               </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="services">
+    <div class="container">
+      <div class="services__body row">
+        <div class="services__title col-xl-5">
+          <h1>Services <span>P</span>rovided</h1>
+        </div>
+        <div class="sevices__info row col-xl-7">
+          <div class="info__body col-xl-6">
+            <div class="info__title">
+              <h4>App Development</h4>
+            </div>
+            <div class="info__text">
+              <span>Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo
+                sem,
+                molestie tincidunt
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt</span>
+            </div>
+            <div class="info__title">
+              <h4>App Design</h4>
+            </div>
+            <div class="info__text">
+              <span>Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo
+                sem, molestie tincidunt
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt</span>
+            </div>
+          </div>
+          <div class="info__body col-xl-6">
+            <div class="info__title">
+              <h4>Game Development</h4>
+            </div>
+            <div class="info__text">
+              <span>Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo
+                sem,
+                molestie tincidunt
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt</span>
+            </div>
+            <div class="info__title">
+              <h4>Game Design</h4>
+            </div>
+            <div class="info__text">
+              <span>Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo
+                sem, molestie tincidunt
+                Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+                molestie tincidunt</span>
             </div>
           </div>
         </div>
