finish fifth_section

--- a/app/index.html
+++ b/app/index.html
@@ -409,6 +409,66 @@
       </div>
     </div>
   </section>
+
+  <section class="our-team">
+    <div class="container">
+      <div class="team__body row col-xl">
+        <div class="team__title col-xl-3">
+          <h1>Our <span>T</span>eam</h1>
+        </div>
+        <div class="team__info col-xl-9">
+          <p><i>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+              pellentesque et nisi
+              et euismod. Pellentesque quis tristique magna.
+            </i></p>
+          <span>
+            Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+            molestie
+            tincidunt
+          </span>
+          <div class="founders row">
+            <div class="ceo col-xl">
+              <img src="./img/team/img1.png" alt="">
+              <div class="founder__name">
+                <span>John Doe</span>
+              </div>
+              <div class="founder__position">
+                <i>CoFounder / CEO</i>
+              </div>
+            </div>
+            <div class="manager col-xl">
+              <img src="./img/team/img2.png" alt="">
+              <div class="founder__name">
+                <span>Kevin Smith</span>
+              </div>
+              <div class="founder__position">
+                <i>Process Manager</i>
+              </div>
+            </div>
+            <div class="president col-xl">
+              <img src="./img/team/img3.png" alt="">
+              <div class="founder__name">
+                <span>Ben Harris</span>
+              </div>
+              <div class="founder__position">
+                <i>Sales President</i>
+              </div>
+            </div>
+            <div class="developer col-xl">
+              <img src="./img/team/img4.png" alt="">
+              <div class="founder__name">
+                <span>Michael Davis</span>
+              </div>
+              <div class="founder__position">
+                <i>Developer</i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
