--- a/app/index.html
+++ b/app/index.html
@@ -469,6 +469,39 @@
       </div>
     </div>
   </section>
+
+  <section class="testimonials">
+    <div class="container">
+      <div class="testimonial__body row">
+        <div class="testimonial__title">
+          <h1>Testimonials</h1>
+        </div>
+        <div class="testimonial__text col-xl-8">
+          <p><i>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
+              pellentesque et nisi
+              et euismod. Pellentesque quis tristique magna.
+            </i></p>
+          <span>
+            Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem,
+            molestie
+            tincidunt
+          </span>
+        </div>
+        <div class="testimonial__person col-xl-4">
+          <div class="testimonail__img">
+            <img src="../img/testimonial/layer-36.png" alt="">
+          </div>
+          <div class="testimonial__name">
+            <span>Thomas Adamson</span>
+          </div>
+          <div class="testimonial__position">
+            <i>CoFounder / CEO</i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
