--- a/app/index.html
+++ b/app/index.html
@@ -502,6 +502,99 @@
       </div>
     </div>
   </section>
+
+  <section class="blogs">
+    <div class="container">
+      <div class="blog__body row col-xl">
+        <div class="blog__title col-xl-1">
+          <h1>Blogs</h1>
+        </div>
+        <div class="navbar col-xl-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Latest Posts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">App Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">App Development</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Quality Assurance</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Development Mode</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">What’s Out There</a>
+            </li>
+          </ul>
+        </div>
+        <div class="blog__items row col-xl">
+          <div class="items__body col-xl-4">
+            <div class="item__img">
+              <img src="./img/blog/img1.png" alt="">
+            </div>
+            <div class="item__date">
+              <span>
+                July 4th 2016</span>
+            </div>
+            <div class="item__title">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="item__text">
+              <i>
+                Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit.
+                Nulla facilisis molestie dignissim.
+              </i>
+            </div>
+          </div>
+
+          <div class="items__body col-xl-4">
+            <div class="item__img">
+              <img src="./img/blog/img2.png" alt="">
+            </div>
+            <div class="item__date">
+              <span>
+                June 20th 2016</span>
+            </div>
+            <div class="item__title">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="item__text">
+              <i>
+                Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit.
+                Nulla facilisis molestie dignissim.
+              </i>
+            </div>
+          </div>
+
+          <div class="items__body col-xl-4">
+            <div class="item__img">
+              <img src="./img/blog/img3.png" alt="">
+            </div>
+            <div class="item__date">
+              <span>
+                May 6th 2016</span>
+            </div>
+            <div class="item__title">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="item__text">
+              <i>
+                Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit.
+                Nulla facilisis molestie dignissim.
+              </i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
