finish eight_section

--- a/app/index.html
+++ b/app/index.html
@@ -595,6 +595,72 @@
       </div>
     </div>
   </section>
+
+  <section class="contact-us">
+    <div class="container">
+      <div class="contact__body row col-xl">
+        <div class="map col-xl-5">
+          <div class="label">
+            <span>Sublime</span>
+          </div>
+        </div>
+        <div class="contact__form col-xl-7">
+          <div class="contact__title">
+            <h1>Contact <span>U</span>s</h1>
+          </div>
+          <form class="form" action="#">
+            <div class="col-xl-12">
+              <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="row">
+              <div class="col-xl-6">
+                <input type="tel" class="form-control" placeholder="Mobile">
+              </div>
+              <div class="col-xl-6">
+                <input type="email" class="form-control" id="email" placeholder="Email">
+              </div>
+            </div>
+            <div class="col-xl-12">
+              <textarea type="text" class="form-control" id="message" placeholder="Your Message"></textarea>
+            </div>
+            <div class="button col-xl-4">
+              <button type="button" class="btn btn-info">SEND</button>
+            </div>
+          </form>
+          <div class="contact__info">
+            <div class="info__title">
+              <h4>Location Map</h4>
+            </div>
+            <ul class="contact__links">
+              <li>Address <span>Hill Mist garden, Pune, 411 048. India</span>
+              </li>
+              <li>Phone <a href="tel">+91 12534 67890</a></li>
+              <li>Email <a class="email" href="email">firkho@firkho.com</a></li>
+            </ul>
+          </div>
+          <div class="social__links">
+            <div class="row col-xl">
+              <div class="twitter col-xl-1">
+                <a href="#">
+                  <img src="./img/contact/img1.png" alt="">
+                </a>
+              </div>
+              <div class="inst col-xl-1">
+                <a href="#">
+                  <img src="./img/contact/img2.png" alt="">
+                </a>
+              </div>
+              <div class="facebook col-xl-1">
+                <a href="#">
+                  <img src="./img/contact/img3.png" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
