--- a/app/index.html
+++ b/app/index.html
@@ -661,6 +661,70 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__body row col-xl">
+        <div class="footer__title">
+          <h4>Sublime</h4>
+        </div>
+        <div class="navbar col-xl-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">ABOUT SUBLIME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">OUR WORKS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">SERVICES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">TEAM</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">TESTIMONIALS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">CLIENTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">CONTACT US</a>
+            </li>
+            <div class="social__links">
+              <div class="row col-xl">
+                <div class="twitter col-xl-3">
+                  <a href="#">
+                    <img src="./img/contact/img1.png" alt="">
+                  </a>
+                </div>
+                <div class="inst col-xl-3">
+                  <a href="#">
+                    <img src="./img/contact/img2.png" alt="">
+                  </a>
+                </div>
+                <div class="facebook col-xl-3">
+                  <a href="#">
+                    <img src="./img/contact/img3.png" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </ul>
+        </div>
+        <div class="tagline col-xl">
+          <h1>W<span>e</span> create <br>
+            Awesome Games</h1>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
