--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="about__items row col">
-          <div class="app__development col-xl-4">
+          <div class="app__development col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -114,7 +114,7 @@
             </div>
           </div>
 
-          <div class="game__design col-xl-4">
+          <div class="game__design col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -137,7 +137,7 @@
             </div>
           </div>
 
-          <div class="content__creation col-xl-4">
+          <div class="content__creation col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -273,10 +273,10 @@
       </div>
       <div class="strategy__items">
         <div class="process row col-xl">
-          <div class="strategy__img col-xl-5">
+          <div class="strategy__img col-md-6 col-lg-6 col-xl-5">
             <img src="./img/strategy/img1.png" alt="">
           </div>
-          <div class="strategy__info col-xl-7">
+          <div class="strategy__info col-md-6 col-lg-6 col-xl-7">
             <div class="strategy__title">
               <h4>Our <span>P</span>rocess</h4>
             </div>
@@ -300,7 +300,7 @@
         </div>
 
         <div class="method row col-xl">
-          <div class="strategy__info col-xl-7">
+          <div class="strategy__info col-md-6 col-lg-6 col-xl-7">
             <div class="strategy__title">
               <h4>Method</h4>
             </div>
@@ -321,16 +321,16 @@
               </span>
             </div>
           </div>
-          <div class="strategy__img col-xl-5">
+          <div class="strategy__img col-md-6 col-lg-6 col-xl-5">
             <img src="./img/strategy/img2.png" alt="">
           </div>
         </div>
 
         <div class="outcome row col-xl">
-          <div class="strategy__img col-xl-5">
+          <div class="strategy__img col-md-6 col-lg-6 col-xl-5">
             <img src="./img/strategy/img3.png" alt="">
           </div>
-          <div class="strategy__info col-xl-7">
+          <div class="strategy__info col-md-6 col-lg-6 col-xl-7">
             <div class="strategy__title">
               <h4>Outcome</h4>
             </div>
@@ -363,7 +363,7 @@
           <h1>Services <span>P</span>rovided</h1>
         </div>
         <div class="sevices__info row col-xl-7">
-          <div class="info__body col-xl-6">
+          <div class="info__body col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <div class="info__title">
               <h4>App Development</h4>
             </div>
@@ -384,7 +384,7 @@
                 molestie tincidunt</span>
             </div>
           </div>
-          <div class="info__body col-xl-6">
+          <div class="info__body col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <div class="info__title">
               <h4>Game Development</h4>
             </div>
@@ -428,7 +428,7 @@
             tincidunt
           </span>
           <div class="founders row">
-            <div class="ceo col-xl">
+            <div class="ceo col-6 col-sm-6 col-md-6 col-lg-6 col-xl">
               <img src="./img/team/img1.png" alt="">
               <div class="founder__name">
                 <span>John Doe</span>
@@ -437,7 +437,7 @@
                 <i>CoFounder / CEO</i>
               </div>
             </div>
-            <div class="manager col-xl">
+            <div class="manager col-6 col-sm-6 col-md-6 col-lg-6 col-xl">
               <img src="./img/team/img2.png" alt="">
               <div class="founder__name">
                 <span>Kevin Smith</span>
@@ -446,7 +446,7 @@
                 <i>Process Manager</i>
               </div>
             </div>
-            <div class="president col-xl">
+            <div class="president col-6 col-sm-6 col-md-6 col-lg-6 col-xl">
               <img src="./img/team/img3.png" alt="">
               <div class="founder__name">
                 <span>Ben Harris</span>
@@ -455,7 +455,7 @@
                 <i>Sales President</i>
               </div>
             </div>
-            <div class="developer col-xl">
+            <div class="developer col-6 col-sm-6 col-md-6 col-lg-6 col-xl">
               <img src="./img/team/img4.png" alt="">
               <div class="founder__name">
                 <span>Michael Davis</span>
@@ -476,7 +476,7 @@
         <div class="testimonial__title">
           <h1>Testimonials</h1>
         </div>
-        <div class="testimonial__text col-xl-8">
+        <div class="testimonial__text col-xs-12 col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
           <p><i>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
               pellentesque et nisi
@@ -488,7 +488,7 @@
             tincidunt
           </span>
         </div>
-        <div class="testimonial__person col-xl-4">
+        <div class="testimonial__person col-xs col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
           <div class="testimonail__img">
             <img src="../img/testimonial/layer-36.png" alt="">
           </div>
@@ -505,12 +505,12 @@
 
   <section class="blogs">
     <div class="container">
-      <div class="blog__body row col-xl">
-        <div class="blog__title col-xl-1">
+      <div class="blog__body row col-lg col-xl">
+        <div class="blog__title col-lg-1 col-xl-1">
           <h1>Blogs</h1>
         </div>
-        <div class="navbar col-xl-3">
-          <ul class="nav flex-column">
+        <div class="navbar col-lg-3 col-xl-3">
+          <ul class="nav flex-column flex-no-column">
             <li class="nav-item">
               <a class="nav-link active" href="#">Latest Posts</a>
             </li>
@@ -531,8 +531,8 @@
             </li>
           </ul>
         </div>
-        <div class="blog__items row col-xl">
-          <div class="items__body col-xl-4">
+        <div class="blog__items row padding-none col-md col-lg col-xl">
+          <div class="items__body col-md-4 col-lg-4 col-xl-4">
             <div class="item__img">
               <img src="./img/blog/img1.png" alt="">
             </div>
@@ -552,7 +552,7 @@
             </div>
           </div>
 
-          <div class="items__body col-xl-4">
+          <div class="items__body col-md-4 col-lg-4 col-xl-4">
             <div class="item__img">
               <img src="./img/blog/img2.png" alt="">
             </div>
@@ -572,7 +572,7 @@
             </div>
           </div>
 
-          <div class="items__body col-xl-4">
+          <div class="items__body col-md-4 col-lg-4 col-xl-4">
             <div class="item__img">
               <img src="./img/blog/img3.png" alt="">
             </div>
@@ -598,13 +598,13 @@
 
   <section class="contact-us">
     <div class="container">
-      <div class="contact__body row col-xl">
-        <div class="map col-xl-5">
+      <div class="contact__body row col-sm col-md col-lg col-xl">
+        <div class="map col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">
           <div class="label">
             <span>Sublime</span>
           </div>
         </div>
-        <div class="contact__form col-xl-7">
+        <div class="contact__form col-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
           <div class="contact__title">
             <h1>Contact <span>U</span>s</h1>
           </div>
@@ -639,18 +639,18 @@
             </ul>
           </div>
           <div class="social__links">
-            <div class="row col-xl">
-              <div class="twitter col-xl-1">
+            <div class="row col col-sm col-md col-lg col-xl">
+              <div class="twitter col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
                 <a href="#">
                   <img src="./img/contact/img1.png" alt="">
                 </a>
               </div>
-              <div class="inst col-xl-1">
+              <div class="inst col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
                 <a href="#">
                   <img src="./img/contact/img2.png" alt="">
                 </a>
               </div>
-              <div class="facebook col-xl-1">
+              <div class="facebook col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
                 <a href="#">
                   <img src="./img/contact/img3.png" alt="">
                 </a>
@@ -664,12 +664,12 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="footer__body row col-xl">
+      <div class="footer__body row col col-sm col-lg col-xl">
         <div class="footer__title">
           <h4>Sublime</h4>
         </div>
-        <div class="navbar col-xl-3">
-          <ul class="nav flex-column">
+        <div class="navbar col-xs-12 col-5 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <ul class="nav flex-column no-column">
             <li class="nav-item">
               <a class="nav-link active" href="#">HOME</a>
             </li>
@@ -698,18 +698,18 @@
               <a class="nav-link active" href="#">CONTACT US</a>
             </li>
             <div class="social__links">
-              <div class="row col-xl">
-                <div class="twitter col-xl-3">
+              <div class="row col col-sm col-md col-lg col-xl">
+                <div class="twitter col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                   <a href="#">
                     <img src="./img/contact/img1.png" alt="">
                   </a>
                 </div>
-                <div class="inst col-xl-3">
+                <div class="inst col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                   <a href="#">
                     <img src="./img/contact/img2.png" alt="">
                   </a>
                 </div>
-                <div class="facebook col-xl-3">
+                <div class="facebook col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                   <a href="#">
                     <img src="./img/contact/img3.png" alt="">
                   </a>
@@ -718,7 +718,7 @@
             </div>
           </ul>
         </div>
-        <div class="tagline col-xl">
+        <div class="tagline col-xs-12 col-7 col-sm-6 col-md col-lg col-xl">
           <h1>W<span>e</span> create <br>
             Awesome Games</h1>
         </div>
