--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="about__items row col">
-          <div class="app__development col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="app__development col-xs-12 col-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -114,7 +114,7 @@
             </div>
           </div>
 
-          <div class="game__design col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="game__design col-xs-12 col-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -137,7 +137,7 @@
             </div>
           </div>
 
-          <div class="content__creation col-xs-12 col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="content__creation col-xs-12 col-4">
             <div class="app__img">
               <img src="./img/about_sublime/layer-18.png" alt="">
             </div>
@@ -476,7 +476,7 @@
         <div class="testimonial__title">
           <h1>Testimonials</h1>
         </div>
-        <div class="testimonial__text col-xs-12 col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
+        <div class="testimonial__text col-xs-12 col-8">
           <p><i>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla
               pellentesque et nisi
@@ -488,7 +488,7 @@
             tincidunt
           </span>
         </div>
-        <div class="testimonial__person col-xs col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+        <div class="testimonial__person col-xs col-4">
           <div class="testimonail__img">
             <img src="../img/testimonial/layer-36.png" alt="">
           </div>
